<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#85aab7" >
    
     <LinearLayout
        android:id="@+id/search_criteria_top_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:orientation="horizontal"
        android:layout_marginLeft="28.0dip"
    	android:layout_marginRight="28.0dip" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/monash_mate" />

            <Button
                android:id="@+id/search_criteria_search_button"
                android:layout_width="match_parent"
                android:layout_height="35dip"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="Search"
                android:textSize="10sp"
            	android:textColor="#FFFFFF" />
    </LinearLayout>
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="28.0dip"
    android:layout_marginRight="28.0dip"
    android:orientation="vertical"
    android:layout_below="@+id/search_criteria_top_linearLayout" >
    
        <EditText
            android:id="@+id/search_criteria_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:background="@drawable/rounded_username"
            android:ems="10"
            android:hint="@string/search_criteria_unit_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="10sp" >
            <requestFocus />
        </EditText>
         <EditText
            android:id="@+id/search_criteria_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1.0dip"
            android:background="@drawable/rounded_notround"
            android:ems="10"
            android:hint="@string/search_criteria_course_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="10sp" >
        </EditText>
         <EditText
            android:id="@+id/search_criteria_native_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1.0dip"
            android:background="@drawable/rounded_notround"
            android:ems="10"
            android:hint="@string/search_criteria_native_language_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="10sp" >
        </EditText>
         <EditText
            android:id="@+id/search_criteria_favorite_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1.0dip"
            android:background="@drawable/rounded_notround"
            android:ems="10"
            android:hint="@string/search_criteria_favorite_food_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="10sp" >
        </EditText>
         <EditText
            android:id="@+id/search_criteria_suburb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1.0dip"
            android:background="@drawable/rounded_password"
            android:ems="10"
            android:hint="@string/search_criteria_suburb_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="10sp" >
        </EditText>
     
</LinearLayout>
</RelativeLayout>
