<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#85aab7" >

    <LinearLayout
        android:id="@+id/add_profile_top_linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="8.0dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please fill out your profile info so we can match your Monash mates"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <Button
                android:id="@+id/add_profile_save_button"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8.0dip"
                android:background="@drawable/rounded_button"
                android:text="@string/add_profile_done"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

<ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_profile_top_linearLayout">    
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip" >
            
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal"
        android:gravity="right" 
        android:layout_weight="1">
        <TextView
                    android:id="@+id/add_profile_student_id_text"
                    android:layout_width="70dip"
                    android:layout_height="35dip"
                    android:layout_gravity="right"
                    android:layout_marginRight="8.0dip"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="Student ID *"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />
		<EditText
            android:id="@+id/add_profile_student_id"
            android:layout_width="150dip"
            android:layout_height="35dip"
            android:background="@drawable/rounded_input"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="10sp"
            android:hint="@string/student_id_hint"
            android:layout_weight="1"
            android:layout_gravity="right" >

            <requestFocus />
        </EditText>

  </LinearLayout>      

      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal"
        android:gravity="right" 
        android:layout_weight="1">

        <TextView
              android:id="@+id/add_profile_name_text"
              android:layout_width="70dip"
              android:layout_height="35dip"
              android:layout_gravity="right"
              android:layout_marginRight="8.0dip"
              android:layout_weight="1"
              android:gravity="right|center_vertical"
              android:text="Name *"
              android:textColor="#FFFFFF"
              android:textSize="12sp" /> 		
          
        <EditText
            android:id="@+id/add_profile_name"
            android:layout_width="150dip"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@drawable/rounded_input"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/name_hint"
            android:textSize="10sp"
            android:layout_gravity="right" >
        </EditText>
</LinearLayout>

      
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal"
        android:gravity="right" 
        android:layout_weight="1">
        <Button
            android:id="@+id/add_profile_course_button"
            android:layout_width="70dip"
            android:layout_height="35dip"
            android:text="@string/ap_string_choose_courses"
            android:textSize="10sp"
            android:layout_weight="1"
            android:textColor="#FFFFFF" />
        
        <TextView
        android:id="@+id/add_profile_selected_course_text"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0.0dip"
        android:text="No course selected"
        android:textSize="10sp"
        android:layout_weight="1"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_background" />
     </LinearLayout>
     
         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal"
        android:gravity="right" 
        android:layout_weight="1">   
          <Button
            android:id="@+id/add_profile_unit_button"
            android:layout_width="70dip"
            android:layout_height="35dip"
            android:text="@string/ap_string_choose_units"
            android:textSize="10sp"
            android:layout_weight="1"
            android:textColor="#FFFFFF" />
          
        <TextView
        android:id="@+id/add_profile_selected_unit_text"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:text="No unit selected"
        android:textSize="10sp"
        android:layout_weight="1"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_background" />
        
        </LinearLayout>
  
         
           <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal"
        android:gravity="right" 
        android:layout_weight="1">  
        
             <TextView
              android:id="@+id/add_profile_nickname_text"
              android:layout_width="70dip"
              android:layout_height="35dip"
              android:layout_gravity="right"
              android:layout_marginRight="8.0dip"
              android:layout_weight="1"
              android:gravity="right|center_vertical"
              android:text="Nickname"
              android:textColor="#FFFFFF"
              android:textSize="12sp" /> 
         <EditText
            android:id="@+id/add_profile_nickname"
            android:layout_width="150dip"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@drawable/rounded_input"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/nickname_hint"
            android:textSize="10sp"
            android:layout_gravity="right" >
        </EditText>
    </LinearLayout>
   
           
           <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal"
        android:gravity="right" 
        android:layout_weight="1">  
        
             <TextView
              android:id="@+id/add_profile_native_language_text"
              android:layout_width="70dip"
              android:layout_height="35dip"
              android:layout_gravity="right"
              android:layout_marginRight="8.0dip"
              android:layout_weight="1"
              android:gravity="right|center_vertical"
              android:text="Native Language"
              android:textColor="#FFFFFF"
              android:textSize="12sp" />                
               
        <EditText
            android:id="@+id/add_profile_native_language"
            android:layout_width="150dip"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@drawable/rounded_input"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/native_language_hint"
            android:textSize="10sp"
            android:layout_gravity="right" >
        </EditText>
 </LinearLayout> 
 
           
           <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal"
        android:gravity="right" 
        android:layout_weight="1">  
        
             <TextView
              android:id="@+id/add_profile_favourite_food_text"
              android:layout_width="70dip"
              android:layout_height="35dip"
              android:layout_gravity="right"
              android:layout_marginRight="8.0dip"
              android:layout_weight="1"
              android:gravity="right|center_vertical"
              android:text="Favourite Food"
              android:textColor="#FFFFFF"
              android:textSize="12sp" />  
         <EditText
            android:id="@+id/add_profile_favourite_food"
            android:layout_width="150dip"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@drawable/rounded_input"
            android:ems="10"
            android:hint="@string/favourite_food_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="10sp"
            android:layout_gravity="right" >
        </EditText>
   
    </LinearLayout>     
   
           <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:layout_marginBottom="20.0dip"
        android:orientation="horizontal"
        android:gravity="right" 
        android:layout_weight="1">  
        
             <TextView
              android:id="@+id/add_profile_suburb_text"
              android:layout_width="70dip"
              android:layout_height="35dip"
              android:layout_gravity="right"
              android:layout_marginRight="8.0dip"
              android:layout_weight="1"
              android:gravity="right|center_vertical"
              android:text="Suburb"
              android:textColor="#FFFFFF"
              android:textSize="12sp" />             
           
          <EditText
            android:id="@+id/add_profile_suburb"
            android:layout_width="150dip"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:background="@drawable/rounded_input"
            android:ems="10"
            android:hint="@string/suburb_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="10sp"
            android:layout_gravity="right" >
        </EditText>
      </LinearLayout>  
    </LinearLayout>

</ScrollView>

</RelativeLayout>